# object-recognition-raspberry-pi-cpp

./: CMakeLists.txt  README.txt
cmake/: Findraspicam.cmake
src/: CMakeLists.txt  ObjectRecognition.cpp
